force-app/main/default/objects/Hiring_Manager__c/Hiring_Manager__c.object-meta.xml
<CustomObject>
    <description>This object is used to hold all recruiters details.</description>
    <label>Hiring Manager</label>
    <nameField>
        <label>Hiring Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hiring Managers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>