force-app/main/default/objects/Hiring_Manager__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>Email ID</description>
    <inlineHelpText>Provide a valid Email ID</inlineHelpText>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>