force-app/main/default/objects/Hiring_Manager__c/fields/Send_FE_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_FE_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends an reminder email</description>
    <label>Send FE Email</label>
    <type>Checkbox</type>
</CustomField>